# tga

./: Cargo.toml  README.md
benches/: benchmark.rs  sample.rs
sample/: color_rle.tga  lena.tga  lena_rle.tga
src/: lib.rs  unmapped_uncompress_rgb.rs
tests/: sample.rs  test_tga.rs  test_tga_parser.rs
