[package]
name = "tga"
version = "0.2.15"
authors = ["Stallmanifold <stallmanifold@gmail.com>"]
readme = "README.md"
repository = "https://github.com/stallmanifold/libtga"
keywords = ["tga", "image processing", "textures", "graphics"]

[lib]
name = "tga"

[dependencies]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
