[package]
name = "tga"
version = "0.2.20"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lambdaxymox/libtga"
edition = "2018"
keywords = ["tga", "image processing", "textures", "graphics"]

[lib]
name = "tga"

[dependencies]

[dev-dependencies]
criterion = "0.2.2"

[[bench]]
name = "benchmark"
harness = false


[profile.bench]
opt-level = 2
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
